Final Project Submission/WPL/src/generated/WPLParser.cpp

// Generated from WPL.g4 by ANTLR 4.10.1


#include "WPLListener.h"
#include "WPLVisitor.h"

#include "WPLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct WPLParserStaticData final {
  WPLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  WPLParserStaticData(const WPLParserStaticData&) = delete;
  WPLParserStaticData(WPLParserStaticData&&) = delete;
  WPLParserStaticData& operator=(const WPLParserStaticData&) = delete;
  WPLParserStaticData& operator=(WPLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag wplParserOnceFlag;
WPLParserStaticData *wplParserStaticData = nullptr;

void wplParserInitialize() {
  assert(wplParserStaticData == nullptr);
  auto staticData = std::make_unique<WPLParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "cuComponent", "varDeclaration", "scalarDeclaration", 
      "scalar", "arrayDeclaration", "type", "varInitializer", "externDeclaration", 
      "procedure", "procHeader", "externProcHeader", "function", "funcHeader", 
      "externFuncHeader", "params", "block", "statement", "loop", "conditional", 
      "select", "selectAlt", "call", "arguments", "arg", "return", "constant", 
      "assignment", "arrayIndex", "expr"
    },
    std::vector<std::string>{
      "", "'do'", "':'", "'boolean'", "'int'", "'str'", "'var'", "'proc'", 
      "'func'", "'extern'", "'return'", "'while'", "'select'", "'end'", 
      "'if'", "'then'", "'else'", "'length'", "'&'", "'<-'", "'='", "'>='", 
      "'>'", "'<='", "'<'", "'-'", "'~='", "'|'", "'+'", "'/'", "'*'", "'~'", 
      "','", "';'", "'...'", "'.'", "'['", "']'", "'('", "')'", "'{'", "'}'"
    },
    std::vector<std::string>{
      "", "", "", "BOOL", "INT", "STR", "VAR", "PROC", "FUNC", "EXTERN", 
      "RETURN", "WHILE", "SELECT", "END", "IF", "THEN", "ELSE", "LENGTH", 
      "AND", "ASSIGN", "EQUAL", "GEQ", "GTR", "LEQ", "LESS", "MINUS", "NEQ", 
      "OR", "PLUS", "DIV", "MUL", "NOT", "COMMA", "SEMICOLON", "ELLIPSIS", 
      "DOT", "LBRACKET", "RBRACKET", "LPAR", "RPAR", "LBRACE", "RBRACE", 
      "WS", "INTEGER", "BOOLEAN", "ID", "STRING", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  wplParserStaticData = staticData.release();
}

}

WPLParser::WPLParser(TokenStream *input) : WPLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

WPLParser::WPLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  WPLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *wplParserStaticData->atn, wplParserStaticData->decisionToDFA, wplParserStaticData->sharedContextCache, options);
}

WPLParser::~WPLParser() {
  delete _interpreter;
}

const atn::ATN& WPLParser::getATN() const {
  return *wplParserStaticData->atn;
}

std::string WPLParser::getGrammarFileName() const {
  return "WPL.g4";
}

const std::vector<std::string>& WPLParser::getRuleNames() const {
  return wplParserStaticData->ruleNames;
}

const dfa::Vocabulary& WPLParser::getVocabulary() const {
  return wplParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView WPLParser::getSerializedATN() const {
  return wplParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

WPLParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WPLParser::CompilationUnitContext::EOF() {
  return getToken(WPLParser::EOF, 0);
}

std::vector<WPLParser::CuComponentContext *> WPLParser::CompilationUnitContext::cuComponent() {
  return getRuleContexts<WPLParser::CuComponentContext>();
}

WPLParser::CuComponentContext* WPLParser::CompilationUnitContext::cuComponent(size_t i) {
  return getRuleContext<WPLParser::CuComponentContext>(i);
}


size_t WPLParser::CompilationUnitContext::getRuleIndex() const {
  return WPLParser::RuleCompilationUnit;
}

void WPLParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void WPLParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}


std::any WPLParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::CompilationUnitContext* WPLParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, WPLParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(60);
      antlrcpp::downCast<CompilationUnitContext *>(_localctx)->cuComponentContext = cuComponent();
      antlrcpp::downCast<CompilationUnitContext *>(_localctx)->components.push_back(antlrcpp::downCast<CompilationUnitContext *>(_localctx)->cuComponentContext);
      setState(63); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << WPLParser::BOOL)
      | (1ULL << WPLParser::INT)
      | (1ULL << WPLParser::STR)
      | (1ULL << WPLParser::VAR)
      | (1ULL << WPLParser::PROC)
      | (1ULL << WPLParser::EXTERN))) != 0));
    setState(65);
    match(WPLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CuComponentContext ------------------------------------------------------------------

WPLParser::CuComponentContext::CuComponentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WPLParser::VarDeclarationContext* WPLParser::CuComponentContext::varDeclaration() {
  return getRuleContext<WPLParser::VarDeclarationContext>(0);
}

WPLParser::ProcedureContext* WPLParser::CuComponentContext::procedure() {
  return getRuleContext<WPLParser::ProcedureContext>(0);
}

WPLParser::FunctionContext* WPLParser::CuComponentContext::function() {
  return getRuleContext<WPLParser::FunctionContext>(0);
}

WPLParser::ExternDeclarationContext* WPLParser::CuComponentContext::externDeclaration() {
  return getRuleContext<WPLParser::ExternDeclarationContext>(0);
}


size_t WPLParser::CuComponentContext::getRuleIndex() const {
  return WPLParser::RuleCuComponent;
}

void WPLParser::CuComponentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCuComponent(this);
}

void WPLParser::CuComponentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCuComponent(this);
}


std::any WPLParser::CuComponentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitCuComponent(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::CuComponentContext* WPLParser::cuComponent() {
  CuComponentContext *_localctx = _tracker.createInstance<CuComponentContext>(_ctx, getState());
  enterRule(_localctx, 2, WPLParser::RuleCuComponent);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(67);
      varDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(68);
      procedure();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(69);
      function();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(70);
      externDeclaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationContext ------------------------------------------------------------------

WPLParser::VarDeclarationContext::VarDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WPLParser::ScalarDeclarationContext* WPLParser::VarDeclarationContext::scalarDeclaration() {
  return getRuleContext<WPLParser::ScalarDeclarationContext>(0);
}

WPLParser::ArrayDeclarationContext* WPLParser::VarDeclarationContext::arrayDeclaration() {
  return getRuleContext<WPLParser::ArrayDeclarationContext>(0);
}


size_t WPLParser::VarDeclarationContext::getRuleIndex() const {
  return WPLParser::RuleVarDeclaration;
}

void WPLParser::VarDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclaration(this);
}

void WPLParser::VarDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclaration(this);
}


std::any WPLParser::VarDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitVarDeclaration(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::VarDeclarationContext* WPLParser::varDeclaration() {
  VarDeclarationContext *_localctx = _tracker.createInstance<VarDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, WPLParser::RuleVarDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(73);
      scalarDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(74);
      arrayDeclaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScalarDeclarationContext ------------------------------------------------------------------

WPLParser::ScalarDeclarationContext::ScalarDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WPLParser::ScalarDeclarationContext::SEMICOLON() {
  return getToken(WPLParser::SEMICOLON, 0);
}

std::vector<WPLParser::ScalarContext *> WPLParser::ScalarDeclarationContext::scalar() {
  return getRuleContexts<WPLParser::ScalarContext>();
}

WPLParser::ScalarContext* WPLParser::ScalarDeclarationContext::scalar(size_t i) {
  return getRuleContext<WPLParser::ScalarContext>(i);
}

tree::TerminalNode* WPLParser::ScalarDeclarationContext::VAR() {
  return getToken(WPLParser::VAR, 0);
}

WPLParser::TypeContext* WPLParser::ScalarDeclarationContext::type() {
  return getRuleContext<WPLParser::TypeContext>(0);
}

std::vector<tree::TerminalNode *> WPLParser::ScalarDeclarationContext::COMMA() {
  return getTokens(WPLParser::COMMA);
}

tree::TerminalNode* WPLParser::ScalarDeclarationContext::COMMA(size_t i) {
  return getToken(WPLParser::COMMA, i);
}


size_t WPLParser::ScalarDeclarationContext::getRuleIndex() const {
  return WPLParser::RuleScalarDeclaration;
}

void WPLParser::ScalarDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScalarDeclaration(this);
}

void WPLParser::ScalarDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScalarDeclaration(this);
}


std::any WPLParser::ScalarDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitScalarDeclaration(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::ScalarDeclarationContext* WPLParser::scalarDeclaration() {
  ScalarDeclarationContext *_localctx = _tracker.createInstance<ScalarDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, WPLParser::RuleScalarDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WPLParser::BOOL:
      case WPLParser::INT:
      case WPLParser::STR: {
        setState(77);
        antlrcpp::downCast<ScalarDeclarationContext *>(_localctx)->t = type();
        break;
      }

      case WPLParser::VAR: {
        setState(78);
        match(WPLParser::VAR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(81);
    antlrcpp::downCast<ScalarDeclarationContext *>(_localctx)->scalarContext = scalar();
    antlrcpp::downCast<ScalarDeclarationContext *>(_localctx)->scalars.push_back(antlrcpp::downCast<ScalarDeclarationContext *>(_localctx)->scalarContext);
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == WPLParser::COMMA) {
      setState(82);
      match(WPLParser::COMMA);
      setState(83);
      antlrcpp::downCast<ScalarDeclarationContext *>(_localctx)->scalarContext = scalar();
      antlrcpp::downCast<ScalarDeclarationContext *>(_localctx)->scalars.push_back(antlrcpp::downCast<ScalarDeclarationContext *>(_localctx)->scalarContext);
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(89);
    match(WPLParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScalarContext ------------------------------------------------------------------

WPLParser::ScalarContext::ScalarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WPLParser::ScalarContext::ID() {
  return getToken(WPLParser::ID, 0);
}

WPLParser::VarInitializerContext* WPLParser::ScalarContext::varInitializer() {
  return getRuleContext<WPLParser::VarInitializerContext>(0);
}


size_t WPLParser::ScalarContext::getRuleIndex() const {
  return WPLParser::RuleScalar;
}

void WPLParser::ScalarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScalar(this);
}

void WPLParser::ScalarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScalar(this);
}


std::any WPLParser::ScalarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitScalar(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::ScalarContext* WPLParser::scalar() {
  ScalarContext *_localctx = _tracker.createInstance<ScalarContext>(_ctx, getState());
  enterRule(_localctx, 8, WPLParser::RuleScalar);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    antlrcpp::downCast<ScalarContext *>(_localctx)->id = match(WPLParser::ID);
    setState(93);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WPLParser::ASSIGN) {
      setState(92);
      antlrcpp::downCast<ScalarContext *>(_localctx)->varInit = varInitializer();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayDeclarationContext ------------------------------------------------------------------

WPLParser::ArrayDeclarationContext::ArrayDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WPLParser::ArrayDeclarationContext::LBRACKET() {
  return getToken(WPLParser::LBRACKET, 0);
}

tree::TerminalNode* WPLParser::ArrayDeclarationContext::INTEGER() {
  return getToken(WPLParser::INTEGER, 0);
}

tree::TerminalNode* WPLParser::ArrayDeclarationContext::RBRACKET() {
  return getToken(WPLParser::RBRACKET, 0);
}

tree::TerminalNode* WPLParser::ArrayDeclarationContext::ID() {
  return getToken(WPLParser::ID, 0);
}

tree::TerminalNode* WPLParser::ArrayDeclarationContext::SEMICOLON() {
  return getToken(WPLParser::SEMICOLON, 0);
}

WPLParser::TypeContext* WPLParser::ArrayDeclarationContext::type() {
  return getRuleContext<WPLParser::TypeContext>(0);
}


size_t WPLParser::ArrayDeclarationContext::getRuleIndex() const {
  return WPLParser::RuleArrayDeclaration;
}

void WPLParser::ArrayDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayDeclaration(this);
}

void WPLParser::ArrayDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayDeclaration(this);
}


std::any WPLParser::ArrayDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitArrayDeclaration(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::ArrayDeclarationContext* WPLParser::arrayDeclaration() {
  ArrayDeclarationContext *_localctx = _tracker.createInstance<ArrayDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, WPLParser::RuleArrayDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    antlrcpp::downCast<ArrayDeclarationContext *>(_localctx)->typename_ = type();
    setState(96);
    match(WPLParser::LBRACKET);
    setState(97);
    match(WPLParser::INTEGER);
    setState(98);
    match(WPLParser::RBRACKET);
    setState(99);
    match(WPLParser::ID);
    setState(100);
    match(WPLParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

WPLParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WPLParser::TypeContext::BOOL() {
  return getToken(WPLParser::BOOL, 0);
}

tree::TerminalNode* WPLParser::TypeContext::INT() {
  return getToken(WPLParser::INT, 0);
}

tree::TerminalNode* WPLParser::TypeContext::STR() {
  return getToken(WPLParser::STR, 0);
}


size_t WPLParser::TypeContext::getRuleIndex() const {
  return WPLParser::RuleType;
}

void WPLParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void WPLParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


std::any WPLParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::TypeContext* WPLParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 12, WPLParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << WPLParser::BOOL)
      | (1ULL << WPLParser::INT)
      | (1ULL << WPLParser::STR))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarInitializerContext ------------------------------------------------------------------

WPLParser::VarInitializerContext::VarInitializerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WPLParser::VarInitializerContext::ASSIGN() {
  return getToken(WPLParser::ASSIGN, 0);
}

WPLParser::ConstantContext* WPLParser::VarInitializerContext::constant() {
  return getRuleContext<WPLParser::ConstantContext>(0);
}


size_t WPLParser::VarInitializerContext::getRuleIndex() const {
  return WPLParser::RuleVarInitializer;
}

void WPLParser::VarInitializerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarInitializer(this);
}

void WPLParser::VarInitializerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarInitializer(this);
}


std::any WPLParser::VarInitializerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitVarInitializer(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::VarInitializerContext* WPLParser::varInitializer() {
  VarInitializerContext *_localctx = _tracker.createInstance<VarInitializerContext>(_ctx, getState());
  enterRule(_localctx, 14, WPLParser::RuleVarInitializer);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(WPLParser::ASSIGN);
    setState(105);
    antlrcpp::downCast<VarInitializerContext *>(_localctx)->c = constant();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExternDeclarationContext ------------------------------------------------------------------

WPLParser::ExternDeclarationContext::ExternDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WPLParser::ExternDeclarationContext::EXTERN() {
  return getToken(WPLParser::EXTERN, 0);
}

tree::TerminalNode* WPLParser::ExternDeclarationContext::SEMICOLON() {
  return getToken(WPLParser::SEMICOLON, 0);
}

WPLParser::ExternProcHeaderContext* WPLParser::ExternDeclarationContext::externProcHeader() {
  return getRuleContext<WPLParser::ExternProcHeaderContext>(0);
}

WPLParser::ExternFuncHeaderContext* WPLParser::ExternDeclarationContext::externFuncHeader() {
  return getRuleContext<WPLParser::ExternFuncHeaderContext>(0);
}


size_t WPLParser::ExternDeclarationContext::getRuleIndex() const {
  return WPLParser::RuleExternDeclaration;
}

void WPLParser::ExternDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExternDeclaration(this);
}

void WPLParser::ExternDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WPLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExternDeclaration(this);
}


std::any WPLParser::ExternDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WPLVisitor*>(visitor))
    return parserVisitor->visitExternDeclaration(this);
  else
    return visitor->visitChildren(this);
}

WPLParser::ExternDeclarationContext* WPLParser::externDeclaration() {
  ExternDeclarationContext *_localctx = _tracker.createInstance<ExternDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 16, WPLParser::RuleExternDeclaration);
